--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
       </div>
 
       <div class="col-lg-6 col-md-12 text-center" data-aos="fade-left" data-aos-delay="300">
-        <img src="https://i.postimg.cc/jjMfPyHG/2.png" img-fluid rounded-3" alt="Persona usando la aplicación de salud en su teléfono">
+        <img src="https://i.postimg.cc/jjMfPyHG/2.png" height="150" width="150" img-fluid rounded-3" alt="Persona usando la aplicación de salud en su teléfono">
       </div>
 
     </div>
