--- a/index.html
+++ b/index.html
@@ -595,9 +595,71 @@
       </div>
     </div>
   </section>
+<!-- =======================
+Footer
+=========================== -->
+<footer id="footer" class="bg-dark text-white py-5">
+  <div class="container">
+    <div class="row">
 
-  <footer id="footer" class="mt-5">
-  </footer>
+      <!-- Columna 1: Logo y Misión -->
+      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+        <!-- Puedes reusar el logo de tu navbar -->
+        <img src="https://i.postimg.cc/YCrFDXC1/image.png" alt="Logo App Salud" width="150" height="45" class="mb-3">
+        <p class="small text-white-50">
+          Facilitando el manejo de la diabetes e hipertensión en Guayaquil, un paso a la vez.
+        </p>
+      </div>
+
+      <!-- Columna 2: Enlaces Rápidos -->
+      <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+        <h5 class="text-uppercase mb-3">Enlaces</h5>
+        <ul class="list-unstyled">
+          <li class="mb-2"><a href="#billboard" class="text-white-50 text-decoration-none">Inicio</a></li>
+          <li class="mb-2"><a href="#features" class="text-white-50 text-decoration-none">Características</a></li>
+          <li class="mb-2"><a href="#nuestro-impacto" class="text-white-50 text-decoration-none">Propósito</a></li>
+          <li class="mb-2"><a href="#registro" class="text-white-50 text-decoration-none">Registro</a></li>
+        </ul>
+      </div>
+
+      <!-- Columna 3: Legal -->
+      <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+        <h5 class="text-uppercase mb-3">Legal</h5>
+        <ul class="list-unstyled">
+          <li class="mb-2"><a href="#terminos" class="text-white-50 text-decoration-none">Términos y Condiciones</a></li>
+          <li class="mb-2"><a href="#privacidad" class="text-white-50 text-decoration-none">Política de Privacidad</a></li>
+        </ul>
+      </div>
+
+      <!-- Columna 4: Redes Sociales -->
+      <div class="col-lg-3 col-md-12">
+        <h5 class="text-uppercase mb-3">Síguenos</h5>
+        <ul class="list-unstyled">
+          <!-- NOTA: Reemplaza '#' con tus URLs reales -->
+          <li class="mb-2"><a href="#" class="text-white-50 text-decoration-none">Facebook</a></li>
+          <li class="mb-2"><a href="#" class="text-white-50 text-decoration-none">Instagram</a></li>
+          <li class="mb-2"><a href="#" class="text-white-50 text-decoration-none">LinkedIn</a></li>
+        </ul>
+      </div>
+
+    </div>
+
+    <!-- Separador y Copyright -->
+    <hr class="my-4" style="border-top: 1px solid rgba(255, 255, 255, 0.1);">
+
+    <div class="row">
+      <div class="col-12 text-center">
+        <p class="small text-white-50">
+          &copy; 2025 [Nombre de tu App]. Todos los derechos reservados.
+        </p>
+        <p class="small text-white-50">
+          Hecho con ❤️ en Guayaquil, Ecuador.
+        </p>
+      </div>
+    </div>
+
+  </div>
+</footer>
 </body>
 
 </html>
