--- a/index.html
+++ b/index.html
@@ -513,6 +513,9 @@
 
 <section id="purpose-flip" class="py-5">
   <div class="container">
+    <h4 class="text-center fw-bold mb-5" style="color:#00618e;">
+  🌿Nuestra Misión y Compromiso
+</h4>
 
     <div class="row justify-content-center g-4">
 
