--- a/index.html
+++ b/index.html
@@ -586,6 +586,9 @@
     <h4 class="text-center fw-bold mb-5" style="color:#00618e;">
   🌿Nuestra Misión y Compromiso
 </h4>
+<p class="text-center mb-5" style="color:#4f4f4f;">
+  Descubre el propósito de este proyecto y los pilares que lo sustentan.
+</p>
 
     <div class="row justify-content-center g-4">
 
@@ -663,10 +666,11 @@
 </section>
 
 <section class="why-app-solution">
-<h4 class="section-title mb-4 text-center" style="color: #00618e;">
-  ¿Por qué usar una App es la solución?
-</h4>
-  <div class="row justify-content-center gap-1">
+
+<h4 class="text-center fw-bold mb-5" style="color:#00618e;">📱¿Por qué usar una App es la solución?</h4>
+<p class="text-center mb-5" style="color:#4f4f4f;">
+Conoce por qué es la forma más confiable de mejorar tu cuidado diario.
+</p>  <div class="row justify-content-center gap-1">
 
     <!-- Seguimiento Personalizado -->
     <div class="col-md-3 text-center" data-aos="fade-in" data-aos-delay="0">
