--- a/index.html
+++ b/index.html
@@ -944,8 +944,96 @@ Conoce por qué es la forma más confiable de mejorar tu cuidado diario.
     </div>
   </div>
 </div>
+<script type="module">
+  // --- 1. Importaciones de Firebase ---
+  // Importa las funciones que necesitas
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-analytics.js";
+  
+  // ¡IMPORTANTE! Añade las funciones de Firestore
+  import { 
+    getFirestore, 
+    collection, 
+    addDoc, 
+    serverTimestamp 
+  } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-firestore.js";
 
-</section>
+  // --- 2. Configuración de Firebase ---
+  // ¡USA TU CLAVE REGENERADA AQUÍ!
+  const firebaseConfig = {
+    apiKey: "1:614941761166:web:b4b94a25e59e50ce80b3df",
+    authDomain: "seguisalud-7ed62.firebaseapp.com",
+    projectId: "seguisalud-7ed62",
+    storageBucket: "seguisalud-7ed62.firebasestorage.app",
+    messagingSenderId: "614941761166",
+    appId: "1:614941761166:web:b4b94a25e59e50ce80b3df",
+    measurementId: "G-Z455VQ2KJB"
+  };
+
+  // --- 3. Inicialización ---
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+  
+  // Inicializa Cloud Firestore y obtén una referencia al servicio
+  const db = getFirestore(app);
+
+  // --- 4. Lógica del Formulario ---
+  
+  // Selecciona los elementos del DOM
+  const contactForm = document.getElementById("contactForm");
+  const successPopup = document.getElementById("successPopup");
+  const closePopupBtn = document.getElementById("closePopupBtn");
+
+  // Escucha el evento "submit" del formulario
+  contactForm.addEventListener("submit", async (e) => {
+    // Evita que la página se recargue
+    e.preventDefault();
+
+    // Obtiene los valores de los campos
+    const name = document.getElementById("name").value;
+    const email = document.getElementById("email").value;
+    const phone = document.getElementById("phone").value;
+    const category = document.getElementById("category").value;
+    const message = document.getElementById("message").value;
+
+    // Validación simple (puedes mejorarla)
+    if (!name || !email || !message) {
+      alert("Por favor, completa los campos obligatorios (Nombre, Correo y Mensaje).");
+      return; // Detiene la ejecución
+    }
+
+    try {
+      // Intenta guardar los datos en la colección "contactos"
+      const docRef = await addDoc(collection(db, "contactos"), {
+        name: name,
+        email: email,
+        phone: phone,
+        category: category,
+        message: message,
+        sentAt: serverTimestamp() // Añade la fecha de envío
+      });
+
+      console.log("Documento escrito con ID: ", docRef.id);
+
+      // Si todo sale bien:
+      // 1. Muestra el pop-up
+      successPopup.style.display = "flex";
+      // 2. Limpia el formulario
+      contactForm.reset();
+
+    } catch (error) {
+      // Si hay un error
+      console.error("Error al añadir el documento: ", error);
+      alert("Hubo un error al enviar tu mensaje. Por favor, inténtalo de nuevo.");
+    }
+  });
+
+  // Añade el evento para cerrar el pop-up
+  closePopupBtn.addEventListener("click", () => {
+    successPopup.style.display = "none";
+  });
+
+</script>
 
 <footer class="py-5 bg-white">
   <div class="container">
@@ -997,7 +1085,6 @@ Conoce por qué es la forma más confiable de mejorar tu cuidado diario.
     </div>
   </div>
 </footer>
- 
   <script src="js/jquery.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/SmoothScroll.js"></script>
